--- a/pipeline/kustomization.yaml
+++ b/pipeline/kustomization.yaml
@@ -1,5 +1,5 @@
 #apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+#kind: Kustomization
 resources:
   - event_listener.yaml
   - event_listener_service.yaml
