--- a/pipeline/kustomization.yaml
+++ b/pipeline/kustomization.yaml
@@ -1,6 +1,8 @@
 #apiVersion: kustomize.config.k8s.io/v1beta1
 #kind: Kustomization
 resources:
+  - namespace.yaml
+  - rolebinding.yaml
   - event_listener.yaml
   - event_listener_service.yaml
   - event_listener_route.yaml
