changed pipeline preset in order to avoid failure when triggered manualy

--- a/pipeline/pipeline.yaml
+++ b/pipeline/pipeline.yaml
@@ -35,7 +35,7 @@ spec:
     - default: nodejs-gitops-pipeline
       name: NAMESPACE
       type: string
-    - default: develop
+    - default: foo/bar/develop
       name: REF
       type: string
 
