added prod deployment

--- a/app/dev/app.yaml
+++ b/app/dev/app.yaml
@@ -47,7 +47,7 @@ spec:
     spec:
       containers:
         - name: nodejs-gitops
-          image: "image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/nodejs-gitops:main"
+          image: "image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/nodejs-gitops:develop"
           imagePullPolicy: IfNotPresent
           resources:
             limits:
@@ -102,4 +102,42 @@ spec:
       dnsPolicy: ClusterFirst
       securityContext: {}
       schedulerName: default-scheduler
-
+--- 
+kind: Service
+apiVersion: v1
+metadata:
+  name: nodejs-gitops
+  labels:
+    app: nodejs-gitops
+  annotations:
+    description: Exposes and load balances the application pods
+    service.alpha.openshift.io/dependencies: '[{"name": "postgresql", "kind": "Service"}]'
+spec:
+  ipFamilies:
+    - IPv4
+  ports:
+    - name: web
+      protocol: TCP
+      port: 8080
+      targetPort: 8080
+  internalTrafficPolicy: Cluster
+  type: ClusterIP
+  ipFamilyPolicy: SingleStack
+  sessionAffinity: None
+  selector:
+    name: nodejs-gitops
+status:
+  loadBalancer: {}
+--- 
+kind: Route
+apiVersion: route.openshift.io/v1
+metadata:
+  name: nodejs-gitops
+  labels:
+    app: nodejs-gitops
+spec:
+  to:
+    kind: Service
+    name: nodejs-gitops
+    weight: 100
+  wildcardPolicy: None
