refactoring the pipeline

--- a/app/app.yaml
+++ b/app/app.yaml
@@ -58,9 +58,9 @@ metadata:
 spec:
   project: default-app-project
   revisionHistoryLimit: 3
-  #syncPolicy:
-  #  automated:
-  #    prune: true
+  syncPolicy:
+    automated:
+      prune: true
   #    selfHeal: true
   destination:
     namespace: nodejs-gitops-pipeline
