--- a/pipeline/task_git_update_deployment.yaml
+++ b/pipeline/task_git_update_deployment.yaml
@@ -41,17 +41,16 @@ spec:
         rm -rf git-update-digest-workdir
         git clone $(params.GIT_REPOSITORY) git-update-digest-workdir
 
-    #- name: update-digest
-    #  image: k8s.gcr.io/kustomize/kustomize:v3.8.7
-    #  workingDir: $(workspaces.workspace.path)
-    #  script: |
-    #    cd git-update-digest-workdir/$(params.KUSTOMIZATION_PATH)
-    #    /app/kustomize edit set image $(params.CURRENT_IMAGE)=$(params.NEW_IMAGE)@$(params.NEW_DIGEST)#
-    #
-    #    echo "##########################"
-    #    echo "### kustomization.yaml ###"
-    #    echo "##########################"
-    #    cat kustomization.yaml
+    - name: update-digest
+      image: image-registry.openshift-image-registry.svc:5000/$(context.pipelineRun.namespace)/gitops-cli:latest
+      workingDir: $(workspaces.workspace.path)
+      script: |
+        cd git-update-digest-workdir/$(params.KUSTOMIZATION_PATH)
+
+        echo "resources:\n\t$(params.NEW_IMAGE)" > kustomization.yaml
+
+        echo "-> kustomization.yaml"
+        cat kustomization.yaml
 
     - name: git-commit
       image: image-registry.openshift-image-registry.svc:5000/$(context.pipelineRun.namespace)/gitops-cli:latest
@@ -64,7 +63,7 @@ spec:
         git status
         git add $(params.KUSTOMIZATION_PATH)/kustomization.yaml
         # git commit -m "[$(context.pipelineRun.name)] Image digest updated"
-        git commit -m "[ci] Image digest updated"
+        git commit -am "[ci] Image digest updated"
 
         git remote add auth-origin $(echo $(params.GIT_REPOSITORY) | sed -E "s#http://(.*)#http://$(params.GIT_USERNAME):$(params.GIT_PASSWORD)@\1#g")
         git push auth-origin master
