--- a/pipeline/trigger_template.yaml
+++ b/pipeline/trigger_template.yaml
@@ -37,7 +37,7 @@ spec:
 
           - name: IMAGE_STREAM
             value: >-
-              image-registry.openshift-image-registry.svc:5000/$(context.pipelineRun.namespace)/nodejs-gitops
+              image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/nodejs-gitops
           - name: IMAGE_TAG
             value: latest
 
