--- a/pipeline/task_noop.yaml
+++ b/pipeline/task_noop.yaml
@@ -9,7 +9,7 @@ spec:
       type: string
   steps:
     - name: msg
-      image: image-registry.openshift-image-registry.svc:5000/$(context.pipelineRun.namespace)/gitops-cli:latest
+      image: image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/gitops-cli:latest
       script: |
         #!/usr/bin/env bash
 
