fixing gh client auth

--- a/pipeline/pipeline.yaml
+++ b/pipeline/pipeline.yaml
@@ -20,6 +20,15 @@ spec:
     - name: GIT_BRANCH_REF
       type: string
       default: "foo/bar/develop"
+    - name: GIT_PUSHER_NAME
+      type: string
+      default: "root"
+    - name: GIT_PUSHER_EMAIL
+      type: string
+      default: "roo@example.com"
+    - name: GIT_COMMIT_MESSAGE
+      type: string
+      default: "commit"
 
     - name: BUILDER_VERSION
       type: string
@@ -71,8 +80,18 @@ spec:
       taskRef:
         name: github-update-deployment
       params:
-        - name: GIT_REPOSITORY
+        - name: APP_MANIFESTS_GIT
           value: "$(params.APP_MANIFESTS_GIT)"
+
+        - name: GIT_REVISION
+          value: $(params.GIT_REVISION)
+        - name: GIT_PUSHER_NAME
+          value: $(params.GIT_PUSHER_NAME)
+        - name: GIT_PUSHER_EMAIL
+          value: $(params.GIT_PUSHER_EMAIL)
+        - name: GIT_COMMIT_MESSAGE
+          value: $(params.GIT_COMMIT_MESSAGE)
+          
         - name: CURRENT_IMAGE
           value: $(params.IMAGE_STREAM)
         - name: NEW_IMAGE
@@ -81,6 +100,7 @@ spec:
           value: $(params.GIT_REVISION)
         - name: KUSTOMIZATION_PATH
           value: app/dev
+
       workspaces:
         - name: workspace
           workspace: workspace
