--- a/pipeline/task_github_update_deployment.yaml
+++ b/pipeline/task_github_update_deployment.yaml
@@ -8,10 +8,20 @@ metadata:
   labels:
     operator.tekton.dev/provider-type: community
 spec:
-  description: This Task can be used to update image digest in a Git repo using kustomize
+  description: This task can be used to update image digest in a Git repo using kustomize
   params:
-    - name: GIT_REPOSITORY
+    - name: APP_MANIFESTS_GIT
       type: string
+
+    - name: GIT_REVISION
+      type: string
+    - name: GIT_PUSHER_NAME
+      type: string
+    - name: GIT_PUSHER_EMAIL
+      type: string
+    - name: GIT_COMMIT_MESSAGE
+      type: string
+
     - name: CURRENT_IMAGE
       type: string
     - name: NEW_IMAGE
@@ -44,12 +54,16 @@ spec:
 
         gh auth setup-git
 
+        git config --global user.email "$(params.GIT_PUSHER_EMAIL)"
+
+        git config --global user.name "$(params.GIT_PUSHER_NAME)"
+
     - name: git-clone
       image: image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/gitops-cli:latest
       workingDir: $(workspaces.workspace.path)
       script: |
         rm -rf git-update-digest-workdir
-        git clone $(params.GIT_REPOSITORY) git-update-digest-workdir
+        git clone $(params.APP_MANIFESTS_GIT) git-update-digest-workdir
 
     - name: update-digest
       image: image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/gitops-cli:latest
@@ -67,17 +81,15 @@ spec:
       workingDir: $(workspaces.workspace.path)
       script: |
         cd git-update-digest-workdir
-        git config user.email "tekton-pipelines-ci@redhat.com"
-        git config user.name "$GITHUB_USER"
-
-        git add $(params.KUSTOMIZATION_PATH)/kustomization.yaml
+        
+        # git add $(params.KUSTOMIZATION_PATH)/kustomization.yaml
         # git commit -m "[$(context.pipelineRun.name)] Image digest updated"
-        git commit -am "image digest updated"
+        git commit -am "$(context.pipelineRun.name)@$(params.GIT_REVISION)"
         
         git status
 
-        git remote add auth-origin $(echo $(params.GIT_REPOSITORY) | sed -E "s#http://(.*)#http://$GITHUB_USER:$GITHUB_PASSWORD@\1#g")
-        git push auth-origin main
+        #git remote add auth-origin $(echo $(params.GIT_REPOSITORY) | sed -E "s#http://(.*)#http://$GITHUB_USER:$GITHUB_PASSWORD@\1#g")
+        git push origin main
 
         RESULT_SHA="$(git rev-parse HEAD | tr -d '\n')"
         EXIT_CODE="$?"
