fixing gh client auth

--- a/pipeline/task_github_update_deployment.yaml
+++ b/pipeline/task_github_update_deployment.yaml
@@ -52,12 +52,6 @@ spec:
 
         gh auth status
 
-        gh auth setup-git
-
-        git config --global user.email "$(params.GIT_PUSHER_EMAIL)"
-
-        git config --global user.name "$(params.GIT_PUSHER_NAME)"
-
     - name: git-clone
       image: image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/gitops-cli:latest
       workingDir: $(workspaces.workspace.path)
@@ -81,8 +75,14 @@ spec:
       workingDir: $(workspaces.workspace.path)
       script: |
         cd git-update-digest-workdir
+
+        git config --global user.email "$(params.GIT_PUSHER_EMAIL)"
+
+        git config --global user.name "$(params.GIT_PUSHER_NAME)"
+
+        gh auth setup-git
         
-        git commit -am "$(context.pipelineRun.name)@$(params.GIT_REVISION)"
+        git commit -am "pr@$(params.GIT_REVISION)"
         
         git status
 
