--- a/app/dev/kustomization.yaml
+++ b/app/dev/kustomization.yaml
@@ -1,1 +1,5 @@
-resources:\n\timage-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/nodejs-gitops
+resources:
+  - namespaces.yaml
+  - rolebindings.yaml
+  - app.yaml
+  - db.yaml
