fixing gh client auth

--- a/pipeline/pipeline.yaml
+++ b/pipeline/pipeline.yaml
@@ -83,8 +83,10 @@ spec:
       taskRef:
         name: github-update-deployment
       params:
-        - name: APP_MANIFESTS_GIT
-          value: "$(params.APP_MANIFESTS_GIT)"
+        - name: MANIFESTS_GIT
+          value: "$(params.MANIFESTS_GIT)"
+        - name: MANIFESTS_GIT_BRANCH
+          value: "$(params.MANIFESTS_GIT_BRANCH)"
 
         - name: GIT_REVISION
           value: $(params.GIT_REVISION)
