--- a/pipeline/task_github_update_deployment.yaml
+++ b/pipeline/task_github_update_deployment.yaml
@@ -46,7 +46,7 @@ spec:
           name: github-secrets
 
   steps:
-    - name: setup-github
+    - name: validate-github
       image: image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/gitops-cli:latest
       workingDir: $(workspaces.workspace.path)
       script: |
@@ -54,38 +54,36 @@ spec:
 
         gh auth status
 
-    - name: git-clone
-      image: image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/gitops-cli:latest
-      workingDir: $(workspaces.workspace.path)
-      script: |
-        rm -rf git-update-digest-workdir
-
-        git clone $(params.MANIFESTS_GIT) git-update-digest-workdir
-
-        git checkout -b $(params.MANIFESTS_GIT_BRANCH)
-
     - name: update-digest
       image: image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/gitops-cli:latest
       workingDir: $(workspaces.workspace.path)
       script: |
         cd git-update-digest-workdir/$(params.KUSTOMIZATION_PATH)
 
-        echo "resources:\n\t$(params.NEW_IMAGE)" > kustomization.yaml
-
-        echo "-> kustomization.yaml"
-        cat kustomization.yaml
-
-    - name: git-commit
-      image: image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/gitops-cli:latest
-      workingDir: $(workspaces.workspace.path)
-      script: |
-        cd git-update-digest-workdir
+        # setup git and gh
+        echo "-> setup git and gh"
 
         git config --global user.email "$(params.GIT_PUSHER_EMAIL)"
 
         git config --global user.name "$(params.GIT_PUSHER_NAME)"
 
         gh auth setup-git
+
+        # clone the repo
+        echo "-> cloning $(params.MANIFESTS_GIT)"
+        git clone $(params.MANIFESTS_GIT) git-update-digest-workdir
+
+        git checkout -b $(params.MANIFESTS_GIT_BRANCH)
+
+        # create a patch 
+        echo "-> patching kustomization.yaml"
+
+        echo "resources:\n\t$(params.NEW_IMAGE)" > kustomization.yaml
+
+        git status
+
+        # commit and push
+        echo "-> push to branch $(params.MANIFESTS_GIT_BRANCH)"
         
         export COMMIT_MSG="pr@$(params.GIT_REVISION)"
 
@@ -103,6 +101,8 @@ spec:
         fi
 
         # create a PR
+        echo "-> create a PR"
+        
         gh pr create --base main --head "$RESULT_SHA" --title $COMMIT_MSG --body $COMMIT_MSG
 
         # Make sure we don't add a trailing newline to the result!
