--- a/pipeline/task_github_update_deployment.yaml
+++ b/pipeline/task_github_update_deployment.yaml
@@ -65,6 +65,8 @@ spec:
 
         git config --global user.name "$(params.GIT_PUSHER_NAME)"
 
+        git config pull.rebase true
+
         gh auth setup-git
 
         # clone the repo
@@ -88,9 +90,9 @@ spec:
         # commit and push
         echo "-> push to branch $(params.MANIFESTS_GIT_BRANCH)"
         
-        export COMMIT_MSG="pr@$(params.GIT_REVISION)"
+        export COMMIT_MSG="$(params.MANIFESTS_GIT_BRANCH)@$(params.GIT_REVISION)"
 
-        git commit -am $COMMIT_MSG
+        git commit -am "$COMMIT_MSG"
         
         git push origin $(params.MANIFESTS_GIT_BRANCH)
 
@@ -108,7 +110,7 @@ spec:
         if [ $PR == "" ]; then
           echo "-> create a PR"
 
-          gh pr create --base main --head $(params.MANIFESTS_GIT_BRANCH) --title $COMMIT_MSG --body $COMMIT_MSG
+          gh pr create --base $(params.MANIFESTS_GIT_BRANCH) --head --title $COMMIT_MSG --body $COMMIT_MSG
         else
           echo "-> already some PRs"
           echo "$PR"
